--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@ img{
 	<div class="parent">
 		
 		<button class="ver1">
-			<a href="v1/index.html">Version 1</a>
+			<a href="../risd24-typeandcode-proj1/v1/index.html">Version 1</a>
 		</button>
 		
 		<button class="ver2">
-			<a href="v2/index.html">Version 2</a>
+			<a href="../risd24-typeandcode-proj1/v2/index.html">Version 2</a>
 		</button>
 		
 		<button class="ver3">
-			<a href="v3/index.html">Version 3</a>
+			<a href="../risd24-typeandcode-proj1/v3/index.html">Version 3</a>
 		</button>
 	</div>
 
