--- a/v3/index.html
+++ b/v3/index.html
@@ -215,8 +215,8 @@
 		<div class="main-nav-spacer"></div>
 
 		<!-- how do i connect this to the other versions? do they need to be published before i can connect them? -->
-		<a class="nav-link" href="v1/index.html">Version 1</a>
-		<a class="nav-link" href="/Users/user/Documents/GitHub/risd24-typeandcode-proj1/v2/index.html">Version 2</a>
+		<a class="nav-link" href="../v1/index.html">Version 1</a>
+		<a class="nav-link" href="../v2/index.html">Version 2</a>
 	</nav>
 
 	<div>
